# Hu-Tao-Discord-Bot

./: .gitignore  bot.py  data_extract.py  dataset.json  db.py  dev.py  justfile  llm.py  prompt.txt  pyproject.toml  requirements.txt
src/: bot.py
src/agent/: model.py
src/agent/libs/: chatbot_answer.py  clear_chat.py  context_schema.py  history.py  image_data.py
src/agent/tools/: __init__.py  analyze_images.py  current_datetime.py  search_result.py
src/commands/: __init__.py  channel.py  chat.py  delete_msg.py  generate_openai_key.py  history.py  ping.py  remote_chat.py  test.py
src/libs/: carousel.py  chat_channel.py  logger.py  smart_chunk.py  truncate.py
temp/: prompt.txt
